feat: KAN-368 Writer 구현